add types of "others" as facet filters