@@ -191,14 +191,23 @@ public class SearchController extends FacetAggregationUtils {
     public Map<String, Object> search(String q, List<String> types, int size, Map<String, FacetValue> facetValues, DataStage dataStage, String cursorToken){
         boolean isFilteredByBookmarks = facetValues != null && facetValues.containsKey(FACET_BOOKMARKS);
         List<String> mainCategories = translatorRegistry.getMainCategories();
+        boolean containsOthers = false;
         if(CollectionUtils.isEmpty(types)){
             //No types = all types.
             types = translatorRegistry.getTranslators().stream().map(TranslatorModel::category).collect(Collectors.toList());
+            containsOthers=true;
         }
         else{
             Optional<String> others = types.stream().filter(t -> t.equals("others")).findAny();
             if(others.isPresent()) {
-                types = Stream.concat(types.stream().filter(t -> !t.equals("others")), translatorRegistry.getTranslators().stream().map(TranslatorModel::category).filter(c -> !mainCategories.contains(c))).toList();
+                Stream<String> otherTypes = types.stream().filter(t -> !t.equals("others"));
+                if(facetValues != null && facetValues.get("type") != null && !CollectionUtils.isEmpty(facetValues.get("type").getValues())){
+                    types = Stream.concat(otherTypes, facetValues.get("type").getValues().stream()).toList();
+                }
+                else {
+                    types = Stream.concat(otherTypes, translatorRegistry.getTranslators().stream().map(TranslatorModel::category).filter(c -> !mainCategories.contains(c))).toList();
+                }
+                containsOthers = true;
             }
             //Sanitize user input by excluding those which are not defined in translators
             types = translatorRegistry.getTranslators().stream().map(TranslatorModel::category).filter(types::contains).toList();
@@ -241,7 +250,7 @@ public class SearchController extends FacetAggregationUtils {
             //If we have multiple types, we force the sorting by relevance
             payload.put("sort", getEsSort(null, true));
         }
-        List<Facet> facets = types.stream().map(facetsController::getFacets).flatMap(Collection::stream).distinct().toList();
+        List<Facet> facets = types.stream().map(facetsController::getFacets).flatMap(Collection::stream).distinct().collect(Collectors.toList());
         Map<String, Object> activeFilters = FiltersUtils.getActiveFilters(facets, types, idsToFilter, facetValues);
         Object esPostFilter = FiltersUtils.getFilter(activeFilters, null);
         payload.put("post_filter", esPostFilter);
@@ -265,6 +274,19 @@ public class SearchController extends FacetAggregationUtils {
             facetAggregation.put(FACET_BOOKMARKS, Collections.emptyMap()); //Bookmarks is not a real facet
         }
         Map<String, Object> typesAggregation = getTypesAggregation(result.getAggregations(), mainCategories);
+        if(containsOthers){
+            List<?> aggregates = typesAggregation.entrySet().stream().filter(t -> !mainCategories.contains(t.getKey()) && StringUtils.isNotBlank(t.getKey()) && !t.getKey().equals("others")).map(t -> {
+                Object value = t.getValue();
+                if (value instanceof Map<?, ?>) {
+                    Object count = ((Map<?, ?>) value).get("count");
+                    if (count instanceof Integer) {
+                        return Map.of("count", (Integer) count, "value", t.getKey());
+                    }
+                }
+                return null;
+            }).filter(Objects::nonNull).sorted(Comparator.comparingInt(t -> (Integer)((Map<?,?>)t).get("count")).reversed()).toList();
+            facetAggregation.put("otherTypes", Map.of("keywords", aggregates, "others", 0, "count", aggregates.size()));
+        }
 
         int totalSelected = types.stream().filter(t -> typesAggregation.get(t) instanceof Map).map(t -> ((Map<?, ?>) typesAggregation.get(t)).get("count")).filter(c -> c instanceof Integer).map(c -> (Integer) c).mapToInt(Integer::intValue).sum();
         if(totalSelected>0) {
